Expense split updated (checking of total amount)

--- a/smart_bill_GUI.kv
+++ b/smart_bill_GUI.kv
@@ -902,5 +902,5 @@ GridLayout:
                     size_hint: 0.44, 0.1
                     on_release:
                         app.root.ids['expense_split'].OKBtn()
-                        root.ids['screen_manager'].transition.direction = "right"
-                        app.root.ids['screen_manager'].current = "add_receipt"
+                        #root.ids['screen_manager'].transition.direction = "right"
+                        #app.root.ids['screen_manager'].current = "add_receipt"
