Updated label in 'Add receipt' window

--- a/smart_bill_GUI.kv
+++ b/smart_bill_GUI.kv
@@ -704,7 +704,7 @@ GridLayout:
 
                     Label:
                         # payers list
-                        text: 'Paid by: '
+                        text: 'Paid by: *'
                         pos_hint: {"x":0.1, "top":0.5}
                         size_hint: 0.3, 0.05
                         halign: 'right'
